--- a/tem/src/main/resources/templates/detail-programmacorse.html
+++ b/tem/src/main/resources/templates/detail-programmacorse.html
@@ -62,7 +62,7 @@
 <body class="w3-black">
 <a href="/home" ><img class="logo" id="logo" src="img/logo2.png" th:src="@{/img/logo2.png}" alt="logo" style="width:265px;height:44px;"></img></a>
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
-<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
+<nav th:if="${not adminCheck}" class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
 
     <a href="/home" class="w3-bar-item w3-button w3-padding-large w3-hover-black" >
@@ -88,7 +88,7 @@
 </nav>
 
 <!-- Navbar on small screens (Hidden on medium and large screens) -->
-<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
+<div th:if="${not adminCheck}" class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
     <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
         <a href="/" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
         <a href="/risorse" class="w3-bar-item w3-button" style="width:25% !important">INSERISCI RISORSE</a>
@@ -128,7 +128,7 @@
                         <td th:text="${corsa.conducenti}">Conducenti</td>
                         <td th:text="${corsa.mezzi}">Mezzi</td>
                         <td th:text="${corsa.andata} ? 'Andata' : 'Ritorno'"></td>
-                        <td ><button style="border: none" class="delete_corsa" th:value="${corsa.id}" id="mezzo"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
+                        <td th:if="${not adminCheck}" ><button style="border: none" class="delete_corsa" th:value="${corsa.id}" id="mezzo"><img th:src="@{/img/trash.png}" alt="delete" style="width:15px;height:15px;"/></button></td>
                     </tr>
                 </table>
             </div>
@@ -136,7 +136,7 @@
 
     </div>
     <!-- Contact Section -->
-    <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
+    <div th:if="${not adminCheck}" class="w3-padding-64 w3-content w3-text-grey" id="contact">
         <h2 class="w3-text-light-grey">Contattaci</h2>
         <hr style="width:200px" class="w3-opacity">
 
