IS-IA integration finished + minor fixes
Removed doOperation() from Strategy pattern; GenerationTypeException added

--- a/tem/src/main/resources/templates/home-programma-corse.html
+++ b/tem/src/main/resources/templates/home-programma-corse.html
@@ -67,10 +67,10 @@
        
         <div class="w3-half w3-margin-bottom">
             <div class="colonna5">
-                <a href="/programmacorse/insert/manuale" class="color animazione1"><h3>Generazione manuale</h3></a>
+                <a href="/programmacorse/insert/?type=manuale" class="color animazione1"><h3>Generazione manuale</h3></a>
             </div>
             <div class="colonna5">
-                <a href="#" class="color animazione2"><h3>Generazione automatica</h3></a>
+                <a href="/programmacorse/insert/?type=automatico" class="color animazione2"><h3>Generazione automatica</h3></a>
             </div>
 
         </div>
