--- a/tem/src/main/resources/templates/detail-programmacorse.html
+++ b/tem/src/main/resources/templates/detail-programmacorse.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="css/style2.css" th:href="@{/css/style2.css}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script
         src="https://code.jquery.com/jquery-2.2.4.min.js"
