--- a/tem/src/main/resources/templates/index.html
+++ b/tem/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <link rel="stylesheet" href="style.css">
 <head>
     <meta charset="ISO-8859-1">
@@ -15,10 +15,15 @@
 	<div class="introduzione">
 	<span class="testo"><span style="margin-left:163px;">Benvenuto su <br></span><span class="titolo">Transport Efficiency</span><span class="manager"> Manager<br></span>
 	Genera un programma di corse pi&ugrave; efficiente per la tua azienda.<br></span>
-	<span>
-	      <button class="button1"><a href="/login">Accedi</a></button>
+
+	<span sec:authorize="isAnonymous()">
+	      <button class="button1"><a href="/home">Accedi</a></button>
 	      <button class="button2"><a href="/register">Registra la tua azienda</a></button>
 	</span>
+		<div><span sec:authorize="isAuthenticated()"><span class="testo">
+			Benvenuto <span th:text="${utente.dettaglio.getDenominazione()}">utente</span>. </span>
+	      <button class="button1"><a href="/home">Accedi all'area riservata</a></button>
+		</span></div>
 
 	</div>	
 	 <a  href="/"><img class="logo" id="logo" src="img/logo2.png" th:src="@{/img/logo2.png}" alt="logo" style="width:265px;height:44px;"></img></a>
