--- a/tem/src/main/resources/templates/login.html
+++ b/tem/src/main/resources/templates/login.html
@@ -8,6 +8,22 @@
     <title>Login</title>
 
   </head>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<script
+        src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
+<script th:inline="javascript" th:if="${param.error != null}">
+    $(document).ready(function() {
+        /*<![CDATA[*/
+        Swal.fire({
+            icon: 'error',
+            title: 'Errore',
+            html: 'Le credenziali non sono corrette',
+        })
+    });
+    /*]]>*/
+</script>
   <body>
 <div class="parent">	
 	<div class="sfondo">
