--- a/tem/src/main/resources/templates/signup_form.html
+++ b/tem/src/main/resources/templates/signup_form.html
@@ -37,52 +37,53 @@
 		<div>
 			<div >
 				<label for="email" >E-mail:</label>
-				<input type="email" th:field="${user.email}" id="email" required placeholder="Inserisci la tua mail"/>
+				<input type="email" th:field="${user.email}" id="email" required
+					   minlength="6" maxlength="45" placeholder="Inserisci la tua mail"/>
 				<div class="testoErrori" th:if="${#fields.hasErrors('user.email')}" th:errors="${user.email}"></div>
 			</div>
 			<div >
 				<label>Password:</label>
 					<input type="password" th:field="${user.password}" class="form-control"placeholder="Scegli una password.." 
-							required minlength="6" maxlength="10"/>
+							required minlength="6" maxlength="64"/>
 					<div class="testoErrori" th:if="${#fields.hasErrors('user.password')}" th:errors="${user.password}"></div>
 				</div>
 			<div >
 				<label>Username:</label>
 					<input type="text" th:field="${user.username}" class="form-control" placeholder="Crea uno username" 
-							required minlength="2" maxlength="20" />
+							required minlength="6" maxlength="20" />
 					<div class="testoErrori" th:if="${#fields.hasErrors('user.username')}" th:errors="${user.username}"></div>
 				</div>
 			
 			<div >
 				<label class="col1">Nome azienda: </label>
 					<input type="text" th:field="${dettaglioUtente.denominazione}" class="form-control" placeholder="Inserisci la denominazione aziendale" 
-							required minlength="2" maxlength="20"/>
+							required minlength="2" maxlength="50"/>
 					<div class="testoErrori" th:if="${#fields.hasErrors('dettaglioUtente.denominazione')}" th:errors="${dettaglioUtente.denominazione}"></div>
 		</div>	
 			
 			<div>
 				<label class="col1">Partita IVA:</label>
 					<input type="text" th:field="${dettaglioUtente.partitaIVA}" class="form-control" placeholder="Inserisci il numero di P.IVA"
-							required minlength="2" maxlength="20" />
+							required minlength="11" maxlength="11" />
 					<div class="testoErrori" th:if="${#fields.hasErrors('dettaglioUtente.partitaIVA')}" th:errors="${dettaglioUtente.partitaIVA}"></div>
 				</div>
 			
 			<div >
 				<label class="col1">Telefono: </label>
 					<input type="text" th:field="${dettaglioUtente.telefono}" class="form-control" placeholder="Inserisci un recapito telefonico"
-							required minlength="2" maxlength="20" />
+							required minlength="8" maxlength="30" />
 							<div class="testoErrori" th:if="${#fields.hasErrors('dettaglioUtente.telefono')}" th:errors="${dettaglioUtente.telefono}"></div>
 		</div>
 			<div>
 				<label class="col1">Fax: </label>
 						<input type="text" th:field="${dettaglioUtente.fax}" class="form-control" placeholder="Numero di fax"
-							required minlength="2" maxlength="20" />
+							required minlength="4" maxlength="40" />
 							<div class="testoErrori" th:if="${#fields.hasErrors('dettaglioUtente.fax')}" th:errors="${dettaglioUtente.fax}"></div>
 			</div>
 			<div>
 				<label class="col1">Indirizzo: </label>
 					<input type="text" th:field="${dettaglioUtente.indirizzo}" class="form-control" placeholder="Inserisci un indirizzo"
-							required minlength="2" maxlength="20" />
+							required minlength="2" maxlength="50" />
 							<div class="testoErrori" th:if="${#fields.hasErrors('dettaglioUtente.indirizzo')}" th:errors="${dettaglioUtente.indirizzo}"></div>
 			</div>
 			
@@ -90,14 +91,14 @@
 			<div class="row">
 				<label class="col1">CAP: </label>
 						<input type="text" th:field="${dettaglioUtente.cap}" class="form-control" placeholder="Codice postale"
-							required minlength="2" maxlength="20" />
+							required minlength="5" maxlength="5" />
 							<div class="testoErrori" th:if="${#fields.hasErrors('dettaglioUtente.cap')}" th:errors="${dettaglioUtente.cap}"></div>
 				</div>
 			
 			<div class="row">
 				<label class="col1">Citt&agrave;: </label>
 						<input type="text" th:field="${dettaglioUtente.citta}" class="form-control" placeholder="Inserisci la citt&agrave;"
-							required minlength="2" maxlength="20" />
+							required minlength="2" maxlength="50" />
 							<div class="testoErrori" th:if="${#fields.hasErrors('dettaglioUtente.citta')}" th:errors="${dettaglioUtente.citta}"></div>
 				</div>
 
