--- a/tem/src/main/resources/templates/insert-mezzo.html
+++ b/tem/src/main/resources/templates/insert-mezzo.html
@@ -82,7 +82,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 								</div>
                             </div>
                             <div >
-                                <input type="text" th:field="${mezzo.targa}" class="form-control" id="targa" placeholder="Targa" required minlength="7"> <span th:if="${#fields.hasErrors('targa')}" th:errors="*{targa}" class="text-danger"></span>
+                                <input type="text" th:field="${mezzo.targa}" class="form-control" id="targa" placeholder="Targa" required minlength="7" maxlength="10"> <span th:if="${#fields.hasErrors('targa')}" th:errors="*{targa}" class="text-danger"></span>
                             </div>
                             <div>
                                <input type="text" th:field="${mezzo.tipo}" class="form-control" id="tipo" placeholder="Tipo" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('tipo')}" th:errors="tipo" class="text-danger"></span>
