--- a/tem/src/main/resources/templates/insert-linea.html
+++ b/tem/src/main/resources/templates/insert-linea.html
@@ -68,18 +68,18 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
                     <form action="#" th:action="@{/risorse/submit/linea}" th:object="${linea}" method="post">
                         <div>
                             <div class="form-group col-md-6">
-                                <input type="text" th:field="${linea.nome}" class="form-control" id="nome" placeholder="Nome" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('nome')}" th:errors="nome" class="text-danger"></span>
+                                <input type="text" th:field="${linea.nome}" class="form-control" id="nome" placeholder="Nome" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-8">
-                                <input type="text" th:field="${linea.partenza}" class="form-control" id="partenza" placeholder="Partenza" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('partenza')}" th:errors="partenza" class="text-danger"></span>
+                                <input type="text" th:field="${linea.partenza}" class="form-control" id="partenza" placeholder="Partenza" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('partenza')}" th:errors="*{partenza}" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-8">
-                           <input type="text" th:field="${linea.destinazione}" class="form-control" id="destinazione" placeholder="Destinazione" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('destinazione')}" th:errors="destinazione" class="text-danger"></span>
+                           <input type="text" th:field="${linea.destinazione}" class="form-control" id="destinazione" placeholder="Destinazione" required minlength="2" maxlength="50"> <span th:if="${#fields.hasErrors('destinazione')}" th:errors="*{destinazione}" class="text-danger"></span>
                             </div>
                             
                             <div class="form-group col-md-8">
-							<input type="text" th:field="${linea.durata}" placeholder="Durata indicativa" style="  border-bottom: 1px solid #ff6600;"
-								onclick="this.value=''"required />
+							<input type="text" th:field="${linea.durata}" placeholder="Durata indicativa (in minuti)" style="  border-bottom: 1px solid #ff6600;"
+								onclick="this.value=''"required /><span th:if="${#fields.hasErrors('durata')}" th:errors="*{durata}" class="text-danger"></span>
 						</div>
                             
 
