Revert "Contact section updated (html)"
This reverts commit 1d3042d23a14a75a6653f76a1a86dabd26293d7e.

--- a/tem/src/main/resources/templates/list-programmacorse.html
+++ b/tem/src/main/resources/templates/list-programmacorse.html
@@ -145,10 +145,22 @@
 
         <div class="w3-section">
             <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Salerno, IT</p>
-               <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i><a href="tel:082587650"> Telefono: +39 082587650</a></p>
-                  <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> <a href="mailto: TransportEfficiencyManager@gmail.com">TransportEfficiencyManager@gmail.com</a></p>
+            <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Telefono: +39 082587650</p>
+            <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: TransportEfficiencyManager@gmail.com</p>
         </div><br>
-      
+       <p style="color: white;font-size:20px;font-weight:bold;">Inviaci una mail per richiedere ulteriori informazioni.</p>
+
+        <form action="/action_page.php" target="_blank">
+            <p><input class="w3-input w3-padding-16" type="text" placeholder="Nome" required name="Name"></p>
+            <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
+            <p><input class="w3-input w3-padding-16" type="text" placeholder="Oggetto" required name="Subject"></p>
+            <p><input class="w3-input w3-padding-16" type="text" placeholder="Messaggio" required name="Message"></p>
+            <p>
+                <button class="w3-button w3-light-grey w3-padding-large" type="submit">
+                    <i class="fa fa-paper-plane"></i> INVIA
+                </button>
+            </p>
+        </form>
         <!-- End Contact Section -->
     </divc>
 
